--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
+data/catalogue/raw/opentdb/tokens/
+
 # compiled output
 dist
 tmp
