--- a/data/catalogue/requirements.txt
+++ b/data/catalogue/requirements.txt
@@ -1,33 +1,19 @@
-# Core dependencies
+# Core dependencies for OpenTDB data downloader
 requests>=2.31.0
-python-dotenv>=1.0.0
-pyyaml>=6.0.1
-pydantic>=2.5.0
-fastapi>=0.104.0
-uvicorn>=0.24.0
+aiohttp>=3.9.0
+asyncio-throttle>=1.0.2
 
-# Data processing
-pandas>=2.1.0
-numpy>=1.24.0
+# Data processing and validation
+python-dotenv>=1.0.0
+pydantic>=2.5.0
 jsonschema>=4.20.0
 
-# Ollama integration
-ollama>=0.1.7
-langchain>=0.1.0
-langchain-community>=0.0.10
-
-# Database/Storage
-sqlite3
-sqlalchemy>=2.0.0
-alembic>=1.12.0
-
-# Utilities
+# CLI and utilities
 click>=8.1.0
 rich>=13.7.0
-httpx>=0.25.0
-aiofiles>=23.2.0
+tqdm>=4.66.0
 
-# Development
+# Development and testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
 black>=23.11.0
